[project]
name = "ecoworthy-logger"
version = "1.0.0"
description = "Utility to scrape battery data off of Ecoworthy batteries, or any compatible JBD BMS"
readme = "README.md"
authors = [
    { name = "Shahbaz Momi", email = "ssmomi@uwaterloo.ca" }
]
requires-python = ">=3.13"
dependencies = [
    "attrs>=25.4.0",
    "bluepy>=1.3.0",
    "construct>=2.10.70",
    "prometheus-client>=0.24.1",
    "typer>=0.21.1",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
